Fixed navbar spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     font-size: 14pt;
     color: #534444;
     text-align: center;
-    padding: 40px 18px;
+    padding: 25px 18px;
     text-decoration: none;
     display: inline-block;
     list-style-type: none;
@@ -33,13 +33,13 @@ body {
 
 .nav-left {
     float:left;
-    padding-top: 35px;
-    padding-left: 50px;
+    padding-top: 25px;
+    padding-left: 36px;
 }
 
 .nav-right {
     float:right;
-    padding-right: 36px;
+    padding-right: 32px;
 }
 
 /*Page Contents*/
